--- a/resources/data.qrc
+++ b/resources/data.qrc
@@ -5,5 +5,7 @@
         <file>start.png</file>
         <file>stop.png</file>
         <file>SourceCodePro-Regular.ttf</file>
+        <file>handler.png</file>
+        <file>shooter.png</file>
     </qresource>
 </RCC>
