--- a/viewer/mainwindow.ui
+++ b/viewer/mainwindow.ui
@@ -188,14 +188,17 @@
                  <property name="minimum">
                   <double>0.100000000000000</double>
                  </property>
+                 <property name="maximum">
+                  <double>1000.000000000000000</double>
+                 </property>
                  <property name="singleStep">
                   <double>0.100000000000000</double>
                  </property>
                  <property name="stepType">
-                  <enum>QAbstractSpinBox::AdaptiveDecimalStepType</enum>
+                  <enum>QAbstractSpinBox::DefaultStepType</enum>
                  </property>
                  <property name="value">
-                  <double>1.000000000000000</double>
+                  <double>10.000000000000000</double>
                  </property>
                 </widget>
                </item>
