--- a/viewer/mainwindow.ui
+++ b/viewer/mainwindow.ui
@@ -116,13 +116,7 @@
                 <number>3</number>
                </property>
                <item>
-                <widget class="QToolButton" name="tb_start">
-                 <property name="toolTip">
-                  <string>Запустить симуляцию/
-перезапустить с момента
-последней паузы\смены
-скорости</string>
-                 </property>
+                <widget class="QToolButton" name="tb_startpause">
                  <property name="text">
                   <string>...</string>
                  </property>
@@ -133,23 +127,10 @@
                 </widget>
                </item>
                <item>
-                <widget class="QToolButton" name="tb_pause">
-                 <property name="toolTip">
-                  <string>Поставить на паузу</string>
-                 </property>
-                 <property name="text">
-                  <string>...</string>
-                 </property>
-                 <property name="icon">
-                  <iconset resource="../resources/data.qrc">
-                   <normaloff>:/pause.png</normaloff>:/pause.png</iconset>
-                 </property>
-                </widget>
-               </item>
-               <item>
                 <widget class="QToolButton" name="tb_stop">
                  <property name="toolTip">
-                  <string>Остановить симуляцию</string>
+                  <string>Сбросить время симуляции
+Ctrl+R</string>
                  </property>
                  <property name="text">
                   <string>...</string>
