--- a/viewer/mainwindow.ui
+++ b/viewer/mainwindow.ui
@@ -255,6 +255,22 @@ Ctrl+R</string>
          </widget>
         </item>
         <item>
+         <widget class="QProgressBar" name="progressBar">
+          <property name="maximumSize">
+           <size>
+            <width>16777215</width>
+            <height>5</height>
+           </size>
+          </property>
+          <property name="value">
+           <number>24</number>
+          </property>
+          <property name="textVisible">
+           <bool>false</bool>
+          </property>
+         </widget>
+        </item>
+        <item>
          <widget class="QPlainTextEdit" name="plainTextEdit">
           <property name="frameShape">
            <enum>QFrame::NoFrame</enum>
